Performance and memory optimizations, and graceful AbstractRelationshipHandler shutdown